--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
                         <a class="nav-link ohwonderfulFont" href="faq.html" style="color: white;">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ohwonderfulFont" href="contact.html" style="color: white;">CONTACT</a>
+                        <a class="nav-link ohwonderfulFont" href="ticket.html" style="color: white;">TICKETS</a>
                     </li>
                 </ul>
             </div>
