fixed up the bottom margin from brochure picture

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
     <div id="aboutWrapper">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 mb-5">
                 <a href="Boba-Festival-Brochure.pdf" target="_blank">
                     <img class="bobafestbrochure" src="pictures/BobaFestBrochure.png" alt="BobafestBrochure">
                 </a>
