--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
         <div class="container" style="margin-left: 10px;">
-            <a class="navbar-brand ohwonderfulFont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
+            <a class="navbar-brand bikofont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link ohwonderfulFont" href="about.html" style="color: white;">ABOUT</a>
+                        <a class="nav-link bikofont" href="about.html" style="color: white;">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ohwonderfulFont" href="gallery.html" style="color: white;">GALLERY</a>
+                        <a class="nav-link bikofont" href="gallery.html" style="color: white;">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ohwonderfulFont" href="faq.html" style="color: white;">FAQ</a>
+                        <a class="nav-link bikofont" href="faq.html" style="color: white;">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ohwonderfulFont" href="ticket.html" style="color: white;">TICKETS</a>
+                        <a class="nav-link bikofont" href="ticket.html" style="color: white;">TICKETS</a>
                     </li>
                 </ul>
             </div>
