--- a/ticket.html
+++ b/ticket.html
@@ -18,7 +18,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
         <div class="container" style="margin-left: 10px;">
-            <a class="navbar-brand ohwonderfulFont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
+            <a class="navbar-brand bikofont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,15 +26,15 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link ohwonderfulFont" href="about.html" style="color: white;">ABOUT</a>
+                        <a class="nav-link bikofont" href="about.html" style="color: white;">ABOUT</a>
                     </li>
-                    <li class="nav-item ohwonderfulFont">
+                    <li class="nav-item bikofont">
                         <a class="nav-link" href="gallery.html" style="color: white;">GALLERY</a>
                     </li>
-                    <li class="nav-item ohwonderfulFont">
+                    <li class="nav-item bikofont">
                         <a class="nav-link" href="faq.html" style="color: white;">FAQ</a>
                     </li>
-                    <li class="nav-item ohwonderfulFont">
+                    <li class="nav-item bikofont">
                         <a class="nav-link" href="ticket.html" style="color: white;">TICKETS</a>
                     </li>
                 </ul>
