--- a/ticket.html
+++ b/ticket.html
@@ -45,8 +45,7 @@
 
     <div class="row" style="padding: 40px;">
         <div class="col-lg-6 col-md-6 col-sm-12 mb-4">
-            <img class="masonjar" src="https://www.claires.com/dw/image/v2/BBTK_PRD/on/demandware.static/-/Sites-master-catalog/default/dw444c4962/images/hi-res/49042_1.jpg?sw=734&sh=734&sm=fit"
-                alt="masonjar">
+            <img class="masonjar" src="pictures/alwaysroomforboba.png" alt="masonjar">
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 mb-4">
             <div class="card" style="width: 18rem; display: block; margin: 0 auto; margin-top: 30px;">
