changed hero image, changed pricing info font to biko

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <img src="pictures/contact.jpg" style="width: 100%">
+    <img src="pictures/heroimage.png" style="width: 100%">
     <!-- feature photo -->
 
     <div id="aboutWrapper">
@@ -53,7 +53,7 @@
             <div class="col-lg-6">
                 <h10 class="bikofont">OUR SPONSOR</h10>
                 <br>
-                <img class="fanalepic" src="pictures/Fanale.png">
+                <img src="pictures/Fanale.png">
             </div>
         </div>
     </div>
