--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <img src="pictures/contact.jpg" style="width: 100%">
+    <img src="pictures/heroimage.png" style="width: 100%">
     <!-- feature photo -->
     <div id="faqBackground">
         <div id="faqWrapper">
