--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <!--Landing-->
-    <img src="pictures/contact.jpg" style="width: 100%">
+    <img src="pictures/heroimage.png" style="width: 100%">
     <div class="row mt-4 mb-4">
         <div class="col-lg-6 col-md-12 col-sm-12" style="margin: auto; text-align: center;">
             <h11 class="bikofont timelineheader">COMING OCTOBER 2018</h11>
