--- a/ticket.html
+++ b/ticket.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </nav>
-    <img src="pictures/contact.jpg" style="width: 100%">
+    <img src="pictures/heroimage.png" style="width: 100%">
 
     <div class="row" style="padding: 40px;">
         <div class="col-lg-6 col-md-6 col-sm-12 mb-4">
@@ -51,7 +51,7 @@
             <div class="card" style="width: 18rem; display: block; margin: 0 auto; margin-top: 30px;">
                 <div class="card-body">
                     <h5 class="card-title bikofont">Purchase Your Tickets!</h5>
-                    <h6 class="card-subtitle mb-2 text-muted ohwonderfulFont">Pricing Info:</h6>
+                    <h6 class="card-subtitle mb-2 text-muted bikofont">Pricing Info:</h6>
                     <ul style="padding: 20px;">
                         <li class="bikofont">Presale: $15</li>
                         <li class="bikofont">Presale + Mason Jar: $25</li>
