--- a/gallery.html
+++ b/gallery.html
@@ -40,8 +40,8 @@
             </div>
         </div>
     </nav>
-    <img src="pictures/contact.jpg" style="width: 100%">
     <!-- feature photo -->
+    <img src="pictures/heroimage.png" style="width: 100%">
     <div id="galleryWrapper">
         <div class="row" style="padding: 45px 45px 0 45px;">
             <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
