FAQ content changed to biko font

--- a/faq.html
+++ b/faq.html
@@ -45,24 +45,24 @@
     <div id="faqBackground">
         <div id="faqWrapper">
             <section>
-                <h1 class="ohwonderfulFont">FREQUENTLY ASKED QUESTIONS</h1>
-                <h2 class="ohwonderfulFont">What is the Boba Festival?</h2>
+                <h1 class="bikofont">FREQUENTLY ASKED QUESTIONS</h1>
+                <h2 class="bikofont">What is the Boba Festival?</h2>
                 <h3 class="bikofont">The Boba Festival is a non-profit event where boba shops from all over come to showcase their signature drinks.
                     Guests will be able to purchase a ticket for unlimited access to milk tea samples. This event was founded
                     in 2015 by three boba enthusiasts to bring the boba community together under one roof. We hope to give
                     value to what it means to win the best boba awards. </h3>
-                <h2 class="ohwonderfulFont">Where have you been!? We thought you were an annual festival.</h2>
+                <h2 class="bikofont">Where have you been!? We thought you were an annual festival.</h2>
                 <h3 class="bikofont">We truly apologize for the break that we took. It was a combination of having a small team and other priorities,
                     so the Boba Festival kept getting pushed aside. But now, we’re back with a bigger team, more time, and
                     newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always
                     in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving
                     community. We won’t let you down again!</h3>
-                <h2 class="ohwonderfulFont">Where do the profits go?</h2>
+                <h2 class="bikofont">Where do the profits go?</h2>
                 <h3 class="bikofont">Half of the proceeds goes to Water 1st International that helps provide clean water for people all over the
                     world. The other half of the proceeds goes towards a Scholarship for Future Business Professionals. It
                     is our ambition that the Annual Boba Festival not only serves as a vessel to come together, but also
                     an opportunity to give back to the community.</h3>
-                <h2 class="ohwonderfulFont">Can I sell my own tea/food/merchandise?</h2>
+                <h2 class="bikofont">Can I sell my own tea/food/merchandise?</h2>
                 <h3 class="bikofont">At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own
                     wares.
                 </h3>
