added eventbrite link to purchase button

--- a/ticket.html
+++ b/ticket.html
@@ -59,7 +59,8 @@
                         <li class="bikofont">At the Door: $30</li>
                     </ul>
                     <div class="purchasebuttoncontainer">
-                        <a href="#" class="card-link btn btn-primary" style="background-color: #7dc4c8;; border: none; margin: 0 auto; display: block;">Purchase Now!</a>
+                        <a href="https://www.eventbrite.com/e/boba-festival-2018-tickets-48151846469" class="card-link btn btn-primary" target="_blank"
+                            style="background-color: #7dc4c8;; border: none; margin: 0 auto; display: block;">Purchase Now!</a>
                     </div>
 
 
