minor fix. biko for about page

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
         <div class="container" style="margin-left: 10px;">
-            <a class="navbar-brand bikofont" href="index.html" style="color: white; font-family:oh-wonderful;">THE BOBA FESTIVAL</a>
+            <a class="navbar-brand bikofont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
