--- a/ticket.html
+++ b/ticket.html
@@ -55,6 +55,7 @@
                     <ul style="padding: 20px;">
                         <li class="bikofont">Presale: $15</li>
                         <li class="bikofont">Presale + Mason Jar: $25</li>
+                        <li class="bikofont">General Admission: $25</li>
                     </ul>
                     <div class="purchasebuttoncontainer">
                         <a href="https://www.eventbrite.com/e/boba-festival-2018-tickets-48151846469" class="card-link btn btn-primary" target="_blank"
