--- a/ticket.html
+++ b/ticket.html
@@ -53,8 +53,8 @@
                     <h5 class="card-title bikofont">Purchase Your Tickets!</h5>
                     <h6 class="card-subtitle mb-2 text-muted bikofont">Pricing Info:</h6>
                     <ul style="padding: 20px;">
-                        <li class="bikofont">Presale: $15</li>
-                        <li class="bikofont">Presale + Mason Jar: $25</li>
+                        <li class="bikofont">Early Bird Sale: $15</li>
+                        <li class="bikofont">Early Bird Sale + Mason Jar: $25</li>
                         <li class="bikofont">General Admission: $25</li>
                     </ul>
                     <div class="purchasebuttoncontainer">
