added more faqs

--- a/faq.html
+++ b/faq.html
@@ -57,6 +57,10 @@
                     newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always
                     in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving
                     community. We won’t let you down again!</h3>
+                <h2 class="bikofont">Do children require a ticket?</h2>
+                <h3 class="bikofont">
+                    Children under 6 years old do not require a ticket
+                </h3>
                 <h2 class="bikofont">Where do the profits go?</h2>
                 <h3 class="bikofont">Half of the proceeds goes to Water 1st International that helps provide clean water for people all over the
                     world. The other half of the proceeds goes towards a Scholarship for Future Business Professionals. It
@@ -66,6 +70,23 @@
                 <h3 class="bikofont">At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own
                     wares.
                 </h3>
+                <h2 class="bikofont">What is the difference between each ticket?
+                </h2>
+                <h3 class="bikofont">Early bird (presales) are tier 1 tickets, They give the same access as the general admission tickets, but
+                    at a discounted price. Early bird (presales) + mason jars. This is a bundle with the discounted ticket
+                    and a mason jar. General admission. This is a general admission ticket that gives unlimited milk tea
+                    samples at the event.</h3>
+                <h2 class="bikofont">Is there food at the event?</h2>
+                <h3 class="bikofont">There will be food for purchase at the event from various food trucks</h3>
+                <h2 class="bikofont">Is there entertainment at the event?</h2>
+                <h3 class="bikofont">We will live performers at the event. </h3>
+                <h2 class="bikofont">Will we be releasing more mason jars?</h2>
+                <h3 class="bikofont">Unfortunately, we will not be releasing more mason jars online, but they can be purchased at the event along
+                    with other merchandise items.</h3>
+                <h2 class="bikofont">Will we be releasing more early bird tickets?</h2>
+                <h3 class="bikofont">Unfortunately, no, we will not be releasing more early bird tickets.</h3>
+
+
             </section>
         </div>
     </div>
