minor grammar fix

--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,7 @@
                 <h2 class="bikofont">Is there food at the event?</h2>
                 <h3 class="bikofont">There will be food for purchase at the event from various food trucks</h3>
                 <h2 class="bikofont">Is there entertainment at the event?</h2>
-                <h3 class="bikofont">We will live performers at the event. </h3>
+                <h3 class="bikofont">We will have live performers at the event. </h3>
                 <h2 class="bikofont">Will we be releasing more mason jars?</h2>
                 <h3 class="bikofont">Unfortunately, we will not be releasing more mason jars online, but they can be purchased at the event along
                     with other merchandise items.</h3>
