added liability content on faqs

--- a/faq.html
+++ b/faq.html
@@ -85,8 +85,9 @@
                     with other merchandise items.</h3>
                 <h2 class="bikofont">Will we be releasing more early bird tickets?</h2>
                 <h3 class="bikofont">Unfortunately, no, we will not be releasing more early bird tickets.</h3>
-
-
+                <p class="bikofont">Your attendance to the Boba Festival constitutes consent to be photographed, video recorded, and to have
+                    those photos and videos published. The Boba Festival is not liable for any injuries or accidents. Thank
+                    you!</p>
             </section>
         </div>
     </div>
