added content to about me

--- a/about.html
+++ b/about.html
@@ -57,6 +57,55 @@
                 <img src="pictures/Fanale.png">
             </div>
         </div>
+        <div class="aboutcontent">
+            <h1 class="bikofont">Long time no see boba lovers!</h1>
+            <p class="bikofont">The Boba Festival is a non-profit event where boba shops from all over come to showcase their
+                signature drinks. This event was founded in 2015 by three boba enthusiasts to bring the boba community together
+                under one roof. We hope to give value to what it means to win the best boba awards.</p>
+            <p class="bikofont">For those that are wondering, "Where have you been!? We thought you were an annual festival!"
+                We truly apologize for the break that we took. It was a combination of having a small team and other priorities,
+                so the Boba Festival kept getting pushed aside. But now, we’re back with a bigger team, more time, and newer
+                resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always in the
+                back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving community.
+                We won’t let you down again!</p>
+            <p class="bikofont">We are so thankful for everyone's support at our first event and after two long years, we
+                are finally making a comeback. This year, guests will be able to purchase a ticket for UNLIMITED access to
+                milk tea samples.
+            </p>
+            <p class="bikofont">Aside from being a food festival, this is also a philanthropic event. Half of the proceeds
+                goes to Water 1st International that helps provide clean water for people all over the world. The other half
+                of the proceeds goes towards a Scholarship for Future Business Professionals. It is our ambition that the
+                Annual Boba Festival not only serves as a vessel to come together, but also an opportunity to give back to
+                the community.</p>
+            <p class="bikofont">Follow us @bobafestival on Instagram and Twitter for more updates, raffles, and giveaways!</p>
+            <h2 class="highlightsabout lineacross bikofont" style="color: #7dc4c8;"><span class="lineacross">Highlights from
+                    Boba Festival 2015</span></h2>
+            <p class="bikofont">Thank you to our sponsor, Fanale Drinks!</p>
+            <ul style="list-style: none;">
+                <li class="bikofont">Date: Saturday, August 22, 2015</li>
+                <li class="bikofont">Time: 1 PM – 4 PM PT</li>
+                <li class="bikofont">Location: SJSU's Ballroom, 290 South 7th Street, San Jose, CA 95192</li>
+            </ul>
+            <p class="bikofont">We had 8 amazing boba shops come out!</p>
+            <ul style="list-style: none;">
+                <li class="bikofont">Gong Cha</li>
+                <li class="bikofont">Teaspoon</li>
+                <li class="bikofont">Super Cue Café</li>
+                <li class="bikofont">TeaFM</li>
+                <li class="bikofont">Bar Code</li>
+                <li class="bikofont">Simply Boba</li>
+                <li class="bikofont">Jazen Tea</li>
+                <li class="bikofont">Soyful Desserts</li>
+            </ul>
+            <p class="bikofont">CONGRATS to these shops. The boba community had voted them for:</p>
+            <ul style="list-style: none;">
+                <li class="bikofont">Best Boba - Bar Code</li>
+                <li class="bikofont">Boba Milk Tea - Soyful Desserts</li>
+                <li class="bikofont">Fan Favorite - Super Cue Café</li>
+            </ul>
+            <p class="bikofont">Shout out to Ice Husky for sharing their delicious Taiwanese frozen dessert shaved ice at
+                the event.</p>
+        </div>
     </div>
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
