slight change in wording

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img src="pictures/heroimage.png" style="width: 100%">
     <div class="row mt-4 mb-4">
         <div class="col-lg-6 col-md-12 col-sm-12" style="margin: auto; text-align: center;">
-            <h11 class="bikofont timelineheader">COMING OCTOBER 2018</h11>
+            <h11 class="bikofont timelineheader">RETURNING OCTOBER 2018</h11>
             <div id="countdown">
                 <p id="demo"></p>
                 <script>
