--- a/faq.html
+++ b/faq.html
@@ -47,47 +47,50 @@
             <section>
                 <h1 class="bikofont">FREQUENTLY ASKED QUESTIONS</h1>
                 <h2 class="bikofont">What is the Boba Festival?</h2>
-                <h3 class="bikofont">The Boba Festival is a non-profit event where boba shops from all over come to showcase their signature drinks.
-                    Guests will be able to purchase a ticket for unlimited access to milk tea samples. This event was founded
-                    in 2015 by three boba enthusiasts to bring the boba community together under one roof. We hope to give
-                    value to what it means to win the best boba awards. </h3>
+                <h3 class="bikofont">The Boba Festival is a non-profit event where boba shops from all over come to showcase
+                    their signature drinks. Guests will be able to purchase a ticket for unlimited access to milk tea samples.
+                    This event was founded in 2015 by three boba enthusiasts to bring the boba community together under one
+                    roof. We hope to give value to what it means to win the best boba awards. </h3>
                 <h2 class="bikofont">Where have you been!? We thought you were an annual festival.</h2>
-                <h3 class="bikofont">We truly apologize for the break that we took. It was a combination of having a small team and other priorities,
-                    so the Boba Festival kept getting pushed aside. But now, we’re back with a bigger team, more time, and
-                    newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always
-                    in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving
-                    community. We won’t let you down again!</h3>
+                <h3 class="bikofont">We truly apologize for the break that we took. It was a combination of having a small
+                    team and other priorities, so the Boba Festival kept getting pushed aside. But now, we’re back with a
+                    bigger team, more time, and newer resources. Even though we weren’t able to make time to plan the event,
+                    the Boba Festival was always in the back of our minds. Every time we drank boba, we were reminded of
+                    how we let down the boba-loving community. We won’t let you down again!</h3>
                 <h2 class="bikofont">Do children require a ticket?</h2>
                 <h3 class="bikofont">
                     Children under 6 years old do not require a ticket
                 </h3>
                 <h2 class="bikofont">Where do the profits go?</h2>
-                <h3 class="bikofont">Half of the proceeds goes to Water 1st International that helps provide clean water for people all over the
-                    world. The other half of the proceeds goes towards a Scholarship for Future Business Professionals. It
-                    is our ambition that the Annual Boba Festival not only serves as a vessel to come together, but also
-                    an opportunity to give back to the community.</h3>
-                <h2 class="bikofont">Can I sell my own tea/food/merchandise?</h2>
-                <h3 class="bikofont">At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own
-                    wares.
+                <h3 class="bikofont">Half of the proceeds goes to Water 1st International that helps provide clean water
+                    for people all over the world. The other half of the proceeds goes towards a Scholarship for Future Business
+                    Professionals. It is our ambition that the Annual Boba Festival not only serves as a vessel to come together,
+                    but also an opportunity to give back to the community.</h3>
+                <h2 class="bikofont">Is the event indoors or outdoors?</h2>
+                <h3 class="bikofont">The event will primarily be indoors at the Pavillion Hall at the fairgrounds. There
+                    is a shade patio, and the food trucks will be right outside the patio.
                 </h3>
+                <h2 class="bikofont">Does everybody require a ticket to enter?</h2>
+                <h3 class="bikofont">Yes. Everyone over the age of 6 requires a ticket.</h3>
                 <h2 class="bikofont">What is the difference between each ticket?
                 </h2>
-                <h3 class="bikofont">Early bird (presales) are tier 1 tickets, They give the same access as the general admission tickets, but
-                    at a discounted price. Early bird (presales) + mason jars. This is a bundle with the discounted ticket
-                    and a mason jar. General admission. This is a general admission ticket that gives unlimited milk tea
-                    samples at the event.</h3>
+                <h3 class="bikofont">Early bird (presales) are tier 1 tickets, They give the same access as the general admission
+                    tickets, but at a discounted price. Early bird (presales) + mason jars. This is a bundle with the discounted
+                    ticket and a mason jar. General admission. This is a general admission ticket that gives unlimited milk
+                    tea samples at the event.</h3>
                 <h2 class="bikofont">Is there food at the event?</h2>
                 <h3 class="bikofont">There will be food for purchase at the event from various food trucks</h3>
                 <h2 class="bikofont">Is there entertainment at the event?</h2>
                 <h3 class="bikofont">We will have live performers at the event. </h3>
                 <h2 class="bikofont">Will we be releasing more mason jars?</h2>
-                <h3 class="bikofont">Unfortunately, we will not be releasing more mason jars online, but they can be purchased at the event along
-                    with other merchandise items.</h3>
+                <h3 class="bikofont">Unfortunately, we will not be releasing more mason jars online, but they can be purchased
+                    at the event along with other merchandise items.</h3>
                 <h2 class="bikofont">Will we be releasing more early bird tickets?</h2>
                 <h3 class="bikofont">Unfortunately, no, we will not be releasing more early bird tickets.</h3>
-                <p class="bikofont">Your attendance to the Boba Festival constitutes consent to be photographed, video recorded, and to have
-                    those photos and videos published. The Boba Festival is not liable for any injuries or accidents. Thank
-                    you!</p>
+                <p class="bikofont">Your attendance to the Boba Festival constitutes consent to be photographed, video recorded,
+                    and to have those photos and videos published. The Boba Festival is not liable for any injuries or accidents.
+                    Thank you!
+                </p>
             </section>
         </div>
     </div>
