changed footer content

--- a/faq.html
+++ b/faq.html
@@ -126,7 +126,8 @@
                         </li>
                     </ul>
                     <br>
-                    <h9 class="bikofont">&copy; 2018 The Boba Festival</h9>
+                    <h1 class="bikofont" style="color: white;">Boba Festival&trade;</h1>
+                    <h9 class="bikofont">Copyright &copy; 2015</h9>
                 </div>
             </div>
             <div class="col-lg-4">
