--- a/ticket.html
+++ b/ticket.html
@@ -60,7 +60,8 @@
                     </ul>
                     <div class="purchasebuttoncontainer">
                         <a href="https://www.eventbrite.com/e/boba-festival-2018-tickets-48151846469" class="card-link btn btn-primary" target="_blank"
-                            style="background-color: #7dc4c8;; border: none; margin: 0 auto; display: block;">Purchase Now!</a>
+                            style="background-color: #7dc4c8;; border: none; margin: 0 auto; display: block;">Purchase
+                            Now!</a>
                     </div>
 
 
@@ -101,7 +102,8 @@
                         </li>
                     </ul>
                     <br>
-                    <h9 class="bikofont">&copy; 2018 The Boba Festival</h9>
+                    <h1 class="bikofont" style="color: white;">Boba Festival&trade;</h1>
+                    <h9 class="bikofont">Copyright &copy; 2015</h9>
                 </div>
             </div>
             <div class="col-lg-4">
